// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component with a value 1`] = `
<input
  aria-label="ControlledInput"
  class="ControlledInput my-extra-class"
  data-test-id="cf-ui-controlled-input"
  id="ControlledInput"
  type="checkbox"
  value="someValue"
/>
`;

exports[`renders the component with all required props 1`] = `
<input
  aria-label="ControlledInput"
  class="ControlledInput"
  data-test-id="cf-ui-controlled-input"
  id="ControlledInput"
  type="checkbox"
  value=""
/>
`;

exports[`renders the component with an additional class name 1`] = `
<input
  aria-label="ControlledInput"
  class="ControlledInput my-extra-class"
  data-test-id="cf-ui-controlled-input"
  id="ControlledInput"
  type="checkbox"
  value=""
/>
`;

exports[`renders the component with as checked 1`] = `
<input
  aria-label="ControlledInput"
  checked=""
  class="ControlledInput my-extra-class"
  data-test-id="cf-ui-controlled-input"
  id="ControlledInput"
  type="checkbox"
  value=""
/>
`;

exports[`renders the component with disabled prop 1`] = `
<input
  aria-label="ControlledInput"
  class="ControlledInput my-extra-class ControlledInput--disabled"
  data-test-id="cf-ui-controlled-input"
  disabled=""
  id="ControlledInput"
  type="checkbox"
  value=""
/>
`;

exports[`renders the component with required prop 1`] = `
<input
  aria-label="ControlledInput"
  class="ControlledInput my-extra-class"
  data-test-id="cf-ui-controlled-input"
  id="ControlledInput"
  required=""
  type="checkbox"
  value=""
/>
`;
